# cmake_template

./: CMakeLists.txt  README.md  main.cpp
component/: CMakeLists.txt  adder.cpp  adder.hpp
test/: CMakeLists.txt
test/component/: test_adder.cpp
